# command-line-rust

./: README.md
1-hello/: readme.md
1-hello/src/: main.rs
2-echor/: Cargo.toml  mk-outs.sh  readme.md
2-echor/src/: main.rs
2-echor/tests/: cli.rs
3-catr/: Cargo.toml  readme.md
3-catr/src/: lib.rs  main.rs
3-catr/tests/: cli.rs
4-headr/: Cargo.toml  readme.md
4-headr/src/: lib.rs  main.rs
4-headr/tests/: cli.rs
5-wcr/: Cargo.toml  readme.md
5-wcr/src/: lib.rs
6-uniqr/: ex.txt  make_tests.sh  readme.md
6-uniqr/src/: lib.rs  main.rs
6-uniqr/tests/: cli.rs
7-findr/: Cargo.toml  readme.md
7-findr/src/: lib.rs  main.rs
8-cutr/: readme.md
8-cutr/src/: lib.rs
9-grepr/: Cargo.toml
9-grepr/src/: lib.rs  main.rs
