[package]
name = "catr"
version = "0.1.0"
edition = "2021"
authors = ["William Noble"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "3.0.3"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
rand = "0.8.5"