[package]
name = "grepr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1"
walkdir = "2.0.0"
sys-info = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "2.0.0"
rand = "0.8.0"